name:                salz
version:             0.1.0.0
synopsis:            A standalone wrapper around the crypto library Sodium.
description:
  This library wraps `libsodium` in a way that does not induce a dependency
  on it as an installed system library. The relevant C code is included
  in the Haskell package.
  .
  In order to avoid the accusation of having tampered with the crypto primitives
  the git-repository includes `libsodium` only as a submodule. Build it
  from the repository if you don't trust me! The actual binding code
  can be reviewed for innocence with little effort.
homepage:            https://github.com/lpeterse/haskell-salz
license:             MIT
license-file:        LICENSE
author:              Lars Petersen
maintainer:          info@lars-petersen.net
copyright:           Copyright (c) Lars Petersen 2015
category:            Cryptography
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
                     CONTRIBUTORS.txt
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Crypto.Box.Curve25519XSalsa20Poly1305
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , securemem >= 0.1.9
                     , nonce >= 1.0.2
                     , crypto-box
  hs-source-dirs:      src
  build-tools:         hsc2hs
  default-language:    Haskell2010
  extra-libraries:     sodium